# models/Vaccination.js
@@ -1,20 +1,43 @@
 module.exports = (sequelize, DataTypes) => {
-    const Vaccine = sequelize.define('Vaccine', {
-        VaccineID: {
-            type: DataTypes.UUID,
-            primaryKey: true,
-            defaultValue: DataTypes.UUIDV4,
-            allowNull: false
+    const Vaccination = sequelize.define(
+        "vaccination",
+        {
+            VaccineID: {
+                type: DataTypes.UUID,
+                primaryKey: true,
+                defaultValue: DataTypes.UUIDV4,
+                allowNull: false
+            },
+            Name: {
+                type: DataTypes.STRING,
+                allowNull: false
+            },
+            Description: {
+                type: DataTypes.STRING,
+                allowNull: false
+            },
+            Clinic: {
+                type: DataTypes.STRING,
+                allowNull: false
+            },
+            Appointment: {
+                type: DataTypes.STRING,
+                allowNull: false
+            },
+            Location: {
+                type: DataTypes.STRING,
+                allowNull: false
+            },
+            BestBefore: {
+                type: DataTypes.STRING,
+                allowNull: false
+            }
         },
-        Name: {
-            type: DataTypes.STRING,
-            allowNull: false
-        },
-        Description: {
-            type: DataTypes.STRING,
-            allowNull: false
+        {
+            tableName: "vaccinations",
+            timestamps: true
         }
-    });
+    );
 
-    return Vaccine;
+    return Vaccination;
 };
