# routes/vaccinationRoutes.js
@@ -1,6 +1,0 @@
-const VaccinationController = require("../controllers/VaccinationController");
-
-module.exports = (app) => {
-    app.route("/vaccinations")
-       .get(VaccinationController.getAll);
-};
